Add json converters, implement spectator mode

--- a/GameClient/Content/Localization/English.xml
+++ b/GameClient/Content/Localization/English.xml
@@ -46,6 +46,7 @@
 			But in certain circumstances and owing to the claims of duty or the obligations of business it will
 			frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore
 			always holds in these matters to this principle of selection: he rejects pleasures to secure other. The end.</HowToPlay>
+		<YouAreSpectator>You are a spectator</YouAreSpectator>
 	</Other>
 
 </Content>
