--- a/GameClient/Content/Localization/French.xml
+++ b/GameClient/Content/Localization/French.xml
@@ -36,6 +36,7 @@
 			Le Lorem Ipsum gagna en popularité au fil des siècles, et avec l'avènement de l'informatique, il trouva sa place dans des logiciels de PAO tels que QuarkXPress et Adobe InDesign. La transition vers le numérique permit une diffusion plus large du Lorem Ipsum, faisant de lui le texte de remplissage par défaut pour les professionnels de la communication visuelle
 			Son texte latin archaïque offre un charme intemporel, tout en remplissant sa fonction première : fournir un contenu neutre permettant aux graphistes et maquettistes de se concentrer sur l'aspect visuel de leurs créations. Aujourd'hui, le Lorem Ipsum demeure un outil indispensable, témoignant de l'histoire riche et fascinante de l'imprimerie et du design graphique.
 			Et voilà, c'est fini.</HowToPlay>
+		<YouAreSpectator>Vous êtes un spectateur</YouAreSpectator>
 	</Other>
 
 </Content>
