Add GameEnd scene

--- a/GameClient/Content/Localization/French.xml
+++ b/GameClient/Content/Localization/French.xml
@@ -10,6 +10,7 @@
 		<Exit>Sortir</Exit>
 		<Back>Retour</Back>
 		<Leave>Quitter</Leave>
+		<Continue>Continuer</Continue>
 	</Buttons>
 
 	<Labels>
