--- a/GameClient/Content/Localization/Polish.xml
+++ b/GameClient/Content/Localization/Polish.xml
@@ -4,6 +4,7 @@
          xsi:schemaLocation="http://tempuri.org/Language.xsd Language.xsd">
 
 	<Buttons>
+		<Ok>Ok</Ok>
 		<JoinGame>Dolacz</JoinGame>
 		<Settings>Ustawienia</Settings>
 		<Authors>Autorzy</Authors>
@@ -25,7 +26,26 @@
 		<RoomCode>Kod pokoju</RoomCode>
 		<ServerAddress>Adres serwera</ServerAddress>
 	</Labels>
+	
+	<MessageBoxLabels>
+		<ErrorOccured>Ups, cos poszlo nie tak!</ErrorOccured>
+		<ConnectionFailed>Polaczenie nieudane!</ConnectionFailed>
+		<ConnectionRejected>Polaczenie odrzucone!</ConnectionRejected>
+	</MessageBoxLabels>
+	
+	<ConnectionRejectedReason>
+		<InvalidJoinCode>Nieprawidlowy kod dolaczenia!</InvalidJoinCode>
+		<MissingNickname>Nazwa gracza jest wymagana!</MissingNickname>
+		<NicknameExists>Gracz o takiej nazwie juz istnieje!</NicknameExists>
+		<InvalidUrlPath>Nieprawidlowa sciezka URL!</InvalidUrlPath>
+		<GameFull>Lobby jest pelne!</GameFull>
+		<TooManyFailedAttempts>Za duzo nieudanych prob! Spróbuj ponownie pozniej.</TooManyFailedAttempts>
+	</ConnectionRejectedReason>
 
 	<Other>
+		<NoDetails>Brak szczegolow</NoDetails>
+		<Waiting>Oczekiwanie</Waiting>
+		<Connecting>Laczenie</Connecting>
+		<ServerNotResponding>Serwer nie odpowiada.</ServerNotResponding>
 	</Other>
 </Content>
