--- a/GameClient/Content/Localization/English.xml
+++ b/GameClient/Content/Localization/English.xml
@@ -43,8 +43,10 @@
 	</ConnectionRejectedReason>
 
 	<Other>
+		<Loading>Loading</Loading>
 		<Waiting>Waiting</Waiting>
 		<Connecting>Connecting</Connecting>
+		<NoDetails>No details.</NoDetails>
 		<ServerNotResponding>Server is not responding.</ServerNotResponding>
 	</Other>
 
