Add GameMenu and GameQuitConfirm scenes, change icon paths

--- a/GameClient/Content/Localization/English.xml
+++ b/GameClient/Content/Localization/English.xml
@@ -10,8 +10,12 @@
 		<Authors>Authors</Authors>
 		<Exit>Exit</Exit>
 		<Back>Back</Back>
+		<Close>Close</Close>
 		<Leave>Leave</Leave>
+		<LeaveMatch>Leave match</LeaveMatch>
+		<Stay>Stay</Stay>
 		<Continue>Continue</Continue>
+		<Menu>Menu</Menu>
 	</Buttons>
 
 	<Labels>
@@ -41,6 +45,10 @@
 		<GameFull>Game is full!</GameFull>
 		<TooManyFailedAttempts>Too many failed attempts! Try again later.</TooManyFailedAttempts>
 	</ConnectionRejectedReason>
+
+	<ConfirmQuestion>
+		<LeaveMatch>Are you sure you want to leave the match?</LeaveMatch>
+	</ConfirmQuestion>
 
 	<Other>
 		<Loading>Loading</Loading>
