--- a/GameClient/Content/Localization/Polish.xml
+++ b/GameClient/Content/Localization/Polish.xml
@@ -33,8 +33,8 @@
 	
 	<MessageBoxLabels>
 		<ErrorOccured>Ups, cos poszlo nie tak!</ErrorOccured>
-		<ConnectionFailed>Polaczenie nieudane!</ConnectionFailed>
-		<ConnectionRejected>Polaczenie odrzucone!</ConnectionRejected>
+		<ConnectionFailed>Polaczenie nieudane</ConnectionFailed>
+		<ConnectionRejected>Polaczenie odrzucone</ConnectionRejected>
 	</MessageBoxLabels>
 	
 	<ConnectionRejectedReason>
