--- a/GameClient/Content/Localization/French.xml
+++ b/GameClient/Content/Localization/French.xml
@@ -6,6 +6,7 @@
 	<Buttons>
 		<Ok>Ok</Ok>
 		<JoinGame>Rejoindre</JoinGame>
+		<SinglePlayer>Solo</SinglePlayer>
 		<Settings>Paramètres</Settings>
 		<WatchReplay>Rediffusions</WatchReplay>
 		<Exit>Quitter</Exit>
