--- a/GameClient/Content/Localization/Polish.xml
+++ b/GameClient/Content/Localization/Polish.xml
@@ -6,6 +6,7 @@
 	<Buttons>
 		<Ok>Ok</Ok>
 		<JoinGame>Dołącz</JoinGame>
+		<SinglePlayer>Gra dla jednego gracza</SinglePlayer>
 		<Settings>Ustawienia</Settings>
 		<WatchReplay>Powtórki</WatchReplay>
 		<Exit>Wyjście</Exit>
