--- a/GameClient/Content/Localization/Russian.xml
+++ b/GameClient/Content/Localization/Russian.xml
@@ -6,6 +6,7 @@
 	<Buttons>
 		<Ok>ОК</Ok>
 		<JoinGame>Присоединиться</JoinGame>
+		<SinglePlayer>Oдиночная игра</SinglePlayer>
 		<Settings>Настройки</Settings>
 		<WatchReplay>Смотреть повторы</WatchReplay>
 		<Exit>Выход</Exit>
