--- a/GameClient/Content/Localization/English.xml
+++ b/GameClient/Content/Localization/English.xml
@@ -7,6 +7,7 @@
 		<Ok>Ok</Ok>
 		<JoinGame>Join</JoinGame>
 		<SinglePlayer>Singleplayer</SinglePlayer>
+    <Cooperation>Cooperation</Cooperation>
     <Play>Play</Play>
 		<Settings>Settings</Settings>
 		<WatchReplay>Watch replay</WatchReplay>
@@ -27,6 +28,8 @@
 		<DisplayModeWindowed>Windowed</DisplayModeWindowed>
 		<DisplayModeFullScreen>Fullscreen</DisplayModeFullScreen>
 		<DisplayModeBorderless>Borderless</DisplayModeBorderless>
+    <SingleplayerRoom>Singleplayer</SingleplayerRoom>
+    <CoopRoom>Cooperation</CoopRoom>
 		<JoinRoom>Join room</JoinRoom>
 		<Nickname>Nickname</Nickname>
 		<TeamName>Team name</TeamName>
